1991-07-22  dickey@software.org

	* src/ded.c: quote filename before using it in 'forkfile()'

1991-07-19  dickey@software.org

	* src/ded.c:
	added parm to 'markset()' to tell if we must clear workspace

	* src/dedtype.c: modified interface to 'markset()'

1991-07-17  dickey@software.org

	* src/version.h, src/dedsort.c, src/ded.hlp, src/sortset.c:
	added @-sort and D-sort

1991-07-16  dickey@software.org

	* src/ded.c: modified logic of 'edithead()' to account for the case in
	which the current entry contains '/'.

	* src/ded2s.c: inode-value and number-of-blocks are unsigned

	* src/dedtype.c: inode-value is unsigned

	* src/ftree.c:
	broke out guts of 'ft_insert()' to allow special call from
	'ft_view()', allowing it to recover from bizarre case on
	SunOS where real (mounted) directory was masked by a symbolic
	link.

1991-07-15  dickey@software.org

	* src/ftree.c:
	added guard in case 'ft_insert()' fails to insert current-dir

1991-07-12  dickey@software.org

	* src/ded.c: last change introduced errs in 'count_tags()'

	* src/ded.hlp: note about CTL/G

	* src/version.h: added CTL/G command

	* src/ded.c: added CTL/G command to show tagged files (+blocks/bytes).
	cleanup some message code.

1991-07-11  dickey@software.org

	* src/dedfind.c, src/dedread.c, src/dedshow.c, src/deduniq.c, src/sortset.c, src/deddoit.c, src/dedtype.c, src/ded.c:
	modified interface to to_work()

	* src/dedtype.c: removed redundant workspace-clear on exit

	* src/version.h: minor nits about screen refresh

	* src/dedtype.c: use 'showMARK()' to show current-column

	* src/ded.c: broke-out 'showMARK()' for use in 'dedtype()'

	* src/dedscan.c: modified interface to 'showFILES()'

	* src/dedline.c:
	modified interface to 'showFILES()' so that workspace is not
	cleared when doing the inline operations.

	* src/ded.c:
	modified interface to 'showFILES()' so that scrolling (in a
	given file-list) and inline/toggle operations do not cause
	the workspace to be cleared.
